# Keepou

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  EPICS.md  README.md  SECURITY.md  docker-compose.yml  railway.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  railway.json  requirements.txt
api/app/: config.py  db.py  main.py  mcp_server.py  models.py  schemas.py  security.py
api/app/routers/: admin.py  auth.py  import_keep.py  notes.py  tokens.py
api/app/services/: agent.py  bot.py  keep_import.py  locks.py  markdown.py  versions.py
api/migrations/: env.py
api/migrations/versions/: .gitkeep  207f42539798_create_note_table.py  6ac9820fadb9_create_user_and_allowlistentry_tables.py  a1f4c2d9b6e7_add_note_pin_archive_columns.py  b3d1a54c7e20_create_noteversion_table.py  bc7203093a26_create_note_version_table.py  c5e2a1b9d3f4_add_user_language_column.py  d6f3b2c0e4a5_create_personalaccesstoken_table.py  e7a1c3f95b48_retire_legacy_member_scoped_tokens.py  f9c69e619873_add_note_lock_columns.py
api/tests/: conftest.py  test_admin.py  test_agent.py  test_auth.py  test_config.py  test_cors.py  test_forwarded_host.py  test_health.py  test_import_keep.py  test_locks.py  test_mcp.py  test_notes.py  test_tokens.py  test_versions.py
design/: HANDOFF.md  Keepou - Admin.dc.html  Keepou - Auth.dc.html  Keepou - Import Keep.dc.html  Keepou - Éditeur canonique.dc.html  README.md  claude.md
design/chats/: chat1.md
docs/: ARCHITECTURE.md  DEPLOY.md  EPICS.md  HOWTO-import-google-keep.md  HOWTO-mcp-agent.md  PRD.md  ROADMAP.md  RUNBOOK-backups-restore.md
docs/adr/: 0001-stack-nextjs-pwa.md  0002-postgres-prisma-railway.md  0003-single-editor-lock.md  0004-snapshot-history.md  0005-allowlist-access-control.md  0006-license-agpl.md  README.md
docs/internal/: EPICS.md  README.md
docs/stories/: E0-fondations.md  E1-deploiement-railway.md  E10-import-keep.md  E11-retours-terrain.md  E2-authentification.md  E3-board-notes.md  E4-editeur-note.md  (+5 more)
project/: .thumbnail  Board - 3 directions.dc.html  HANDOFF.md  Keepou - Board.dc.html  Keepou - Historique.dc.html  Keepou - Éditeur & verrou.dc.html
scripts/: backup.sh  cloud_session_setup.sh  restore.sh
stories/: E0-fondations.md  E1-deploiement-railway.md  E8-polish-pwa-a11y-i18n.md  E9-backups-restore.md
web/: .env.example  .env.production  Dockerfile.selfhost  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+116 files in other folders)
