[project]
name = "keepou-api"
version = "0.0.0"
description = "Keepou — API FastAPI (Google Keep auto-hébergé)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.35",
    "sqlmodel>=0.0.22,<0.1",
    "alembic>=1.13,<2.0",
    "pydantic-settings>=2.4,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    # passlib 1.7.x est incompatible avec bcrypt>=4.1 ("password cannot be longer than 72 bytes").
    "bcrypt>=4.0,<4.1",
    "itsdangerous>=2.2,<3.0",
    "python-multipart>=0.0.9,<0.1",
]

[dependency-groups]
# Outillage qualité (uv : `uv sync` installe runtime + dev par défaut).
dev = [
    "ruff>=0.6,<1.0",
    "ty>=0.0.1a1",
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<0.29",   # requis par fastapi.testclient
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, SIM simplify, C4 comprehensions.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.11"
root = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
